--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
 
     <section id="about" class="about">
         <h2>About Us</h2>
-        <p>We are a creative animation studio specializing in bringing dark and captivating stories to life.</p>
+        <p>Welcome to Reaper Studios, where creativity meets technology to bring visions to life. Born from a passion for storytelling and digital artistry, our studio is a collective of dreamers, designers, and innovators dedicated to crafting breathtaking 2D & 3D animations, high-quality game assets, stunning illustrations, and immersive music.
+
+From concept to completion, we specialize in turning ideas into visual masterpieces. Whether it’s game-ready 3D models, cinematic animations, storyboards, or professional video editing, we push the boundaries of artistry and technology to deliver unmatched quality. Our talented composers add the final touch, creating soul-stirring music that elevates every project to new heights.
+
+At Reaper Studios, every frame, texture, and note tells a story. Let’s create something extraordinary together.</p>
         <div class="stats">
             <div class="stat">
                 <h3>100+</h3>
