--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
             <div class="portfolio-item">
                 <img src="https://picsum.photos/400/300?random=1" alt="Project 1" />
                 <h3>Project One</h3>
-                <p>Animation & Development</p>
+                <p>Haunted Roots</p>
             </div>
             <div class="portfolio-item">
                 <img src="https://picsum.photos/400/300?random=2" alt="Project 2" />
                 <h3>Project Two</h3>
-                <p>Character Design</p>
+                <p>GoreVille</p>
             </div>
             <div class="portfolio-item">
                 <img src="https://picsum.photos/400/300?random=3" alt="Project 3" />
                 <h3>Project Three</h3>
-                <p>Motion Graphics</p>
+                <p>....</p>
             </div>
         </div>
     </section>
