--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         </div>
         <div class="nav-links">
             <a href="#home">Home</a>
-            <a href="#work">Work</a>
             <a href="#about">About</a>
+            <a href="#work">Work</a>
+            <a href="#images">Images</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
