updated a note for later

--- a/images/index.html
+++ b/images/index.html
@@ -18,7 +18,7 @@
             <!-- to show the images from selected category-->
         </div>
         <div class="Bottom - section">  
-            <!--to possibly display the image and brief description about the image/characters backstory etc-->
+            <!--to possibly display the image and brief description about the image/characters backstory including the artist that worked on the art-->
         </div>
 
         <footer>
