--- a/images/index.html
+++ b/images/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ReaperFilms - Image Gallery</title>
         <link rel="stylesheet" href="../style.css">
-        <script src="../main.js" defer></script>
+        <script type="module" src="../main.js" defer></script>
     </head>
     <body>
         <section id="Top" class="Top">
