--- a/images/index.html
+++ b/images/index.html
@@ -10,7 +10,7 @@
     <body>
         <section id="Top" class="Top">
             <div class="gallery - category">
-                <!-- program to display a small icon of the gallery of each labeled folder and fetch from json file to display. -->
+                <!-- program main.js to display a small icon of the gallery of each labeled folder and fetch from json file to display. -->
                 <div id="category-list" class="gallery-grid"></div>
             </div>
         </section>
