--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <h1>Reaper Films Studios</h1>
         <p>Bringing your nightmares to life</p>
         <button class="cta-button">Get Started</button>
+        <!-- add image slideshow previewing only the main title images of projects that uppon clicking on directs them to the image gallery of proper project. -->
     </section>
 
     <section id="work" class="work">
