--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reaper Films</title>
+    <title>Reaper Studios</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -24,7 +24,7 @@
     </nav>
 
     <section id="home" class="hero">
-        <h1>Reaper Films Studios</h1>
+        <h1>Reaper Studios</h1>
         <p>Bringing your nightmares to life</p>
         <button class="cta-button">Get Started</button>
         <!-- add image slideshow previewing only the main title images of projects that uppon clicking on directs them to the image gallery of proper project. -->
@@ -64,12 +64,12 @@ At Reaper Studios, every frame, texture, and note tells a story. Let’s create 
                 <p>Projects</p>
             </div>
             <div class="stat">
-                <h3>50+</h3>
+                <h3>little over 10+</h3>
                 <p>Clients</p>
             </div>
             <div class="stat">
-                <h3>1+</h3>
-                <p>Years</p>
+                <h3>6+</h3>
+                <p>months</p>
             </div>
         </div>
     </section>
@@ -89,7 +89,7 @@ At Reaper Studios, every frame, texture, and note tells a story. Let’s create 
     </section>
 
     <footer>
-        <p>&copy; 2025 Reaper Films Studio. All rights reserved.</p>
+        <p>&copy; 2025 Reaper Studio. All rights reserved.</p>
         <p class="creator-credit">Site made by James H Aka Twilight</p>
     </footer>
 
