--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reaper Studios</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
     <nav class="navbar">
         <div class="logo-container">
             <div class="logo-icon">
-                <img src="https://i.imgur.com/XZGHXo4.png" alt="Reaper Films Logo" />
+                <img src="https://i.imgur.com/XZGHXo4.png" alt="Reaper Studios Logo" />
             </div>
-            <div class="logo">Reaper Films</div>
+            <div class="logo">Reaper Studios</div>
         </div>
         <div class="nav-links">
             <a href="#home">Home</a>
-            <a href="#about">About</a>
             <a href="#work">Work</a>
-            <a href="#images">Images</a>
+            <a href="#about">About</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
@@ -27,49 +26,28 @@
         <h1>Reaper Studios</h1>
         <p>Bringing your nightmares to life</p>
         <button class="cta-button">Get Started</button>
-        <!-- add image slideshow previewing only the main title images of projects that uppon clicking on directs them to the image gallery of proper project. -->
     </section>
 
     <section id="work" class="work">
         <h2>Our Work</h2>
-        <div class="portfolio-grid">
-            <div class="portfolio-item">
-                <img src="https://picsum.photos/400/300?random=1" alt="Project 1" />
-                <h3>Project One</h3>
-                <p>Haunted Roots</p>
-            </div>
-            <div class="portfolio-item">
-                <img src="https://picsum.photos/400/300?random=2" alt="Project 2" />
-                <h3>Project Two</h3>
-                <p>GoreVille</p>
-            </div>
-            <div class="portfolio-item">
-                <img src="https://picsum.photos/400/300?random=3" alt="Project 3" />
-                <h3>Project Three</h3>
-                <p>....</p>
-            </div>
-        </div>
+        <div class="portfolio-grid" id="portfolioGrid"></div>
     </section>
 
     <section id="about" class="about">
         <h2>About Us</h2>
-        <p>Welcome to Reaper Studios, where creativity meets technology to bring visions to life. Born from a passion for storytelling and digital artistry, our studio is a collective of dreamers, designers, and innovators dedicated to crafting breathtaking 2D & 3D animations, high-quality game assets, stunning illustrations, and immersive music.
-
-From concept to completion, we specialize in turning ideas into visual masterpieces. Whether it’s game-ready 3D models, cinematic animations, storyboards, or professional video editing, we push the boundaries of artistry and technology to deliver unmatched quality. Our talented composers add the final touch, creating soul-stirring music that elevates every project to new heights.
-
-At Reaper Studios, every frame, texture, and note tells a story. Let’s create something extraordinary together.</p>
+        <p>We are a creative animation studio specializing in bringing dark and captivating stories to life.</p>
         <div class="stats">
             <div class="stat">
                 <h3>3+</h3>
                 <p>Projects</p>
             </div>
             <div class="stat">
-                <h3>little over 10+</h3>
+                <h3>50+</h3>
                 <p>Clients</p>
             </div>
             <div class="stat">
                 <h3>6+</h3>
-                <p>months</p>
+                <p>Months</p>
             </div>
         </div>
     </section>
@@ -89,10 +67,10 @@ At Reaper Studios, every frame, texture, and note tells a story. Let’s create 
     </section>
 
     <footer>
-        <p>&copy; 2025 Reaper Studio. All rights reserved.</p>
+        <p>&copy; 2025 Reaper Studios. All rights reserved.</p>
         <p class="creator-credit">Site made by James H Aka Twilight</p>
     </footer>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
