--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
         <p class="creator-credit">Site made by James H Aka Twilight</p>
     </footer>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
