--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery - Reaper Studios</title>
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/gallery.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="gallery.css" />
 </head>
 <body>
     <nav class="navbar">
@@ -40,6 +40,6 @@
         <p class="creator-credit">Site made by James H Aka Twilight</p>
     </footer>
 
-    <script type="module" src="/gallery.js"></script>
+    <script type="module" src="gallery.js"></script>
 </body>
 </html>
