--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
             <div class="logo">Reaper Studios</div>
         </div>
         <div class="nav-links">
-            <a href="/">Home</a>
+            <a href="/reaperfilms/">Home</a>
             <a href="/#work">Work</a>
             <a href="/#about">About</a>
             <a href="/#contact">Contact</a>
