--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <p>Projects</p>
             </div>
             <div class="stat">
-                <h3>50+</h3>
-                <p>Clients</p>
+                <h3>3+</h3>
+                <p>Official Clients</p>
             </div>
             <div class="stat">
                 <h3>6+</h3>
