--- a/gallery.html
+++ b/gallery.html
@@ -17,9 +17,9 @@
         </div>
         <div class="nav-links">
             <a href="https://realreaperstudios.github.io/reaperfilms/">Home</a>
-            <a href="/#work">Work</a>
-            <a href="/#about">About</a>
-            <a href="/#contact">Contact</a>
+            <a href="https://realreaperstudios.github.io/reaperfilms/#work">Work</a>
+            <a href="https://realreaperstudios.github.io/reaperfilms/#about">About</a>
+            <a href="https://realreaperstudios.github.io/reaperfilms/#contact">Contact</a>
         </div>
     </nav>
 
